<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~ Copyright 2014ff, WoQ - Way of Quality GmbH
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>de.woq.blended</groupId>
  <artifactId>blended-parent</artifactId>
  <packaging>pom</packaging>

  <version>1.0.7-M6-SNAPSHOT</version>

  <properties>
    <blended.version>1.0.7-M6-SNAPSHOT</blended.version>

    <java.version>1.7</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- Where is our docker for building the images and running the itests -->
    <docker.host>localhost</docker.host>
    <docker.port>2375</docker.port>

    <!-- plugin versions -->
    <compiler-plugin.version>2.5.1</compiler-plugin.version>

    <!-- Log level for tests -->
    <loglevel.test>INFO</loglevel.test>

    <!-- library versions -->

    <activemq.version>5.10.0</activemq.version>
    <camel.version>2.14.0</camel.version>
    <karaf.version>2.3.6</karaf.version>
    <hawtio.version>1.4.37</hawtio.version>

    <activeio.version>3.1.4</activeio.version>
    <akka.version>2.3.6</akka.version>
    <aries.proxy.version>1.0.1</aries.proxy.version>
    <aries.blueprint.version>1.1.0</aries.blueprint.version>
    <aries.jmx.version>1.1.1</aries.jmx.version>
    <aries.transaction.version>1.0.0</aries.transaction.version>
    <aries.util.version>1.1.0</aries.util.version>
    <commons.beanutils.version>1.8.3_2</commons.beanutils.version>
    <commons.codec.version>1.6.0</commons.codec.version>
    <commons.collections.version>3.2.1</commons.collections.version>
    <commons.discovery.version>0.4.0</commons.discovery.version>
    <commons.exec.version>1.1</commons.exec.version>
    <commons.httpclient.version>3.1.0</commons.httpclient.version>
    <commons.io.version>1.4.0</commons.io.version>
    <commons.lang.version>2.6</commons.lang.version>
    <commons.net.version>3.3</commons.net.version>
    <commons.pool.version>1.6</commons.pool.version>
    <cxf.version>2.7.6</cxf.version>
    <cglib.version>2.2.0</cglib.version>
    <docker-java.version>0.10.0</docker-java.version>
    <felix.cm.version>1.6.0</felix.cm.version>
    <felix.event.version>1.3.2</felix.event.version>
    <felix.fileinstall.version>3.2.6</felix.fileinstall.version>
    <felix.framework.version>4.2.1</felix.framework.version>
    <felix.metatype.version>1.0.6</felix.metatype.version>
    <felix.scr.version>1.6.2</felix.scr.version>
    <guava.version>14.0</guava.version>
    <hamcrest.version>1.3.0.1</hamcrest.version>
    <insight-log.version>7.2.0.redhat-060</insight-log.version>
    <jackson.version>1.9.12</jackson.version>
    <javax.mail.version>1.4.5</javax.mail.version>
    <jasypt.version>1.9.0_1</jasypt.version>
    <jclouds.version>1.6.1-incubating</jclouds.version>
    <jersey.version>1.18.1</jersey.version>
    <jettison.version>1.3.4</jettison.version>
    <jetty.version>7.6.8.v20121106</jetty.version>
    <jledit.version>0.2.0</jledit.version>
    <joda-time.version>1.6.2</joda-time.version>
    <jolokia.version>1.2.2</jolokia.version>
    <jsch.version>0.1.48_1</jsch.version>
    <json-lenses.version>0.5.4</json-lenses.version>
    <junit.version>4.11</junit.version>
    <linkedhashmap.version>1.4</linkedhashmap.version>
    <log4j.version>1.2.15</log4j.version>
    <logback.version>1.0.1</logback.version>
    <mimepull.version>1.9.4</mimepull.version>
    <mockito.version>1.9.5</mockito.version>
    <neo4j.version>2.1.2</neo4j.version>
    <netty.version>3.8.1.Final</netty.version>
    <ops4j-base.version>1.4.0</ops4j-base.version>
    <osgi.core.version>4.3.0</osgi.core.version>
    <osgi.enterprise.version>4.2.0</osgi.enterprise.version>
    <osweb.asm.version>3.1.0</osweb.asm.version>
    <parboiled.version>1.1.6</parboiled.version>
    <pax-logging.version>1.6.4</pax-logging.version>
    <pax-swissbox.version>1.7.0</pax-swissbox.version>
    <pax-url.version>1.3.6</pax-url.version>
    <pax-web.version>3.1.0</pax-web.version>
    <protobuf.version>2.5.0</protobuf.version>
    <scala.version>2.10</scala.version>
    <scala.micro.version>4</scala.micro.version>
    <scalacheck.version>1.11.4</scalacheck.version>
    <scalactic.version>2.2.0</scalactic.version>
    <scalatest.version>2.2.0</scalatest.version>
    <shapeless.version>1.2.4</shapeless.version>
    <slf4j.version>1.7.2</slf4j.version>
    <spray.version>1.3.2</spray.version>
    <spray-json.version>1.3.1</spray-json.version>
    <spring.version>3.2.4.RELEASE</spring.version>
    <spring.osgi.version>1.2.1</spring.osgi.version>
    <stax.api.version>2.2.0</stax.api.version>
    <testng.version>6.8.8</testng.version>
    <tinybundles.version>1.0.0</tinybundles.version>
    <typesafe.config.version>1.2.0</typesafe.config.version>
    <uncommons.maths.version>1.2.2</uncommons.maths.version>
    <velocity.version>1.7_5</velocity.version>
    <xbean.version>3.14</xbean.version>
    <xmlbeans.version>2.4.0</xmlbeans.version>
    <xpp3.version>1.1.4c_5</xpp3.version>
    <xstream.version>1.3_3</xstream.version>
  </properties>

  <ciManagement>
    <system>jenkins</system>
    <url>http://ci.wayofquality.de:8081/jenkins/job</url>
  </ciManagement>

  <distributionManagement>
    <repository>
      <id>WoQDeploy</id>
      <url>http://ci.wayofquality.de:8085/artifactory/pub-release-local</url>
    </repository>
    <snapshotRepository>
      <id>WoQDeploy</id>
      <url>http://ci.wayofquality.de:8085/artifactory/pub-snapshot-local</url>
    </snapshotRepository>
  </distributionManagement>

  <scm>
    <connection>scm:git:ssh://git@github.com/woq-blended/blended</connection>
    <developerConnection>scm:git:ssh://git@github.com/woq-blended/blended.git</developerConnection>
    <url>https://github.com/woq-blended/blended</url>
  </scm>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
        <filtering>true</filtering>
      </testResource>
      <testResource>
        <directory>src/test/binaryResources</directory>
        <filtering>false</filtering>
      </testResource>
    </testResources>

    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
      <resource>
        <directory>src/main/binaryResources</directory>
        <filtering>false</filtering>
      </resource>
    </resources>

    <pluginManagement>
      <plugins>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-archetype-plugin</artifactId>
          <version>2.2</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>1.3.1</version>
          <executions>
            <execution>
              <id>enforce-maven</id>
              <goals>
                <goal>enforce</goal>
              </goals>
              <configuration>
                <rules>
                  <requireMavenVersion>
                    <version>3.0.5</version>
                  </requireMavenVersion>
                </rules>
              </configuration>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.7</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>2.6</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>2.4</version>
        </plugin>

        <plugin>
          <groupId>org.apache.felix</groupId>
          <artifactId>maven-bundle-plugin</artifactId>
          <version>2.4.0</version>
          <extensions>true</extensions>
          <executions>
            <execution>
              <id>manifest</id>
              <phase>process-classes</phase>
              <goals>
                <goal>manifest</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <supportedProjectTypes>
              <supportedProjectType>jar</supportedProjectType>
              <supportedProjectType>bundle</supportedProjectType>
              <supportedProjectType>war</supportedProjectType>
            </supportedProjectTypes>
            <instructions>
              <_include>-osgi.bnd</_include>
            </instructions>
          </configuration>
        </plugin>

        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compiler-plugin.version}</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <encoding>${project.build.sourceEncoding}</encoding>
            <fork>true</fork>
          </configuration>
        </plugin>

        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.12</version>

          <dependencies>
            <dependency>
              <groupId>org.apache.maven.surefire</groupId>
              <artifactId>surefire-junit47</artifactId>
              <version>2.12</version>
            </dependency>
          </dependencies>

          <configuration>
            <forkMode>always</forkMode>
            <forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>
            <argLine>-Xmx1024m</argLine>
          </configuration>

          <executions>
            <execution>
              <id>default-test</id>
              <phase>test</phase>
              <goals>
                <goal>test</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>net.alchim31.maven</groupId>
          <artifactId>scala-maven-plugin</artifactId>
          <version>3.2.0</version>
          <executions>
            <execution>
              <id>compile-scala</id>
              <goals>
                <goal>compile</goal>
              </goals>
            </execution>
            <execution>
              <id>test-compile-scala</id>
              <goals>
                <goal>testCompile</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <fork>true</fork>
            <scalaVersion>${scala.version}.${scala.micro.version}</scalaVersion>
            <recompileMode>incremental</recompileMode>
            <useZincServer>true</useZincServer>
            <args>
              <arg>-deprecation</arg>
              <arg>-feature</arg>
            </args>
            <jvmArgs>
              <jvmArg>-Xms256m</jvmArg>
              <jvmArg>-Xmx512m</jvmArg>
              <jvmArg>-XX:MaxPermSize=128m</jvmArg>
            </jvmArgs>
          </configuration>
        </plugin>

        <plugin>
          <groupId>com.alexecollins.docker</groupId>
          <artifactId>docker-maven-plugin</artifactId>
          <version>1.4.0</version>
          <configuration>
            <version>1.12</version>
            <username>atooni</username>
            <email>andreas@wayofquality.de</email>
            <!-- This is not the real password - the real password is required when pushing to docker. -->
            <password>foo</password>
            <prefix>atooni/blended</prefix>
            <host>http://${docker.host}:${docker.port}</host>
          </configuration>
          <executions>
            <execution>
              <id>clean-docker</id>
              <goals>
                <goal>clean</goal>
              </goals>
              <phase>clean</phase>
            </execution>
            <execution>
              <id>package-docker</id>
              <goals>
                <goal>package</goal>
              </goals>
              <phase>package</phase>
            </execution>
            <execution>
              <id>deploy-docker</id>
              <goals>
                <goal>deploy</goal>
              </goals>
              <phase>deploy</phase>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.scalatest</groupId>
          <artifactId>scalatest-maven-plugin</artifactId>
          <version>1.0-RC2</version>
          <configuration>
            <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
            <junitxml>.</junitxml>
          </configuration>
          <executions>
            <execution>
              <id>test</id>
              <goals>
                <goal>test</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

      </plugins>
    </pluginManagement>

  </build>

  <repositories>
    <repository>
      <id>WoQ</id>
      <url>http://ci.wayofquality.de:8085/artifactory/complete</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>

    <repository>
      <id>FUSEStaging</id>
      <url>http://repo.fusesource.com/nexus/content/repositories/jboss-fuse-6.1.x</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>

    <repository>
      <id>SpringBundles</id>
      <url>http://repository.springsource.com/maven/bundles/release</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>

    <repository>
      <id>SpringExternalBundles</id>
      <url>http://repository.springsource.com/maven/bundles/external</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>

  </repositories>

  <profiles>
    <profile>
      <id>ntest</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>

      <properties>
        <test>0</test>
        <failIfNoTests>false</failIfNoTests>
      </properties>
    </profile>
  </profiles>
</project>


